crates/stc_ts_file_analyzer/tests/pass/types/intersection/readOnly/1.ts
interface Base {
    readonly value: number;
}
interface Mutable {
    value: number;
}

let mutable: Base & Mutable;
mutable.value = 12;