crates/stc_ts_file_analyzer/tests/errors/conformance/types/intersection/typeReadOnly/2.ts
interface Base {
    readonly value: number;
}
interface Identical {
    readonly value: number;
}

let identical: Base & Identical;
identical.value = 12; // error, lhs can't be a readonly property